Añadido local_settings.py para práctica de Docker

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,16 +1,19 @@
 version: '3.4'
 
+# Version de postgres cambiada: 19.9-alpine
+# Contraseña de postgres cambiada también: postgres
+
 services:
   db:
     restart: always
     container_name: decide_db
-    image: postgres:11.18-bullseye
+    image: postgres:14.9-alpine
     volumes:
       - db:/var/lib/postgresql/data
     networks:
       - decide
     environment:
-      - POSTGRES_PASSWORD=
+      - POSTGRES_PASSWORD=postgres
   web:
     restart: always
     container_name: decide_web
