--- a/.github/workflows/Django-CI.yml
+++ b/.github/workflows/Django-CI.yml
@@ -40,6 +40,14 @@ jobs:
 
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
+
+      - name: Set environment variables
+        run: |
+          echo "DATABASE_INT_URL='${{ secrets.DATABASE_INT_URL }}'" >> $GITHUB_ENV
+          echo "DATABASE_EXT_URL='${{ secrets.DATABASE_EXT_URL }}'" >> $GITHUB_ENV
+          echo "SECRET_KEY='${{ secrets.SECRET_KEY }}'" >> $GITHUB_ENV
+          echo "DEBUG='${{ secrets.DEBUG }}'" >> $GITHUB_ENV
+        
       - name: Install dependencies and config
         run: |
           python -m pip install --upgrade pip
