--- a/.github/workflows/Django-CI.yml
+++ b/.github/workflows/Django-CI.yml
@@ -40,7 +40,15 @@ jobs:
 
       - name: psycopg2 prerequisites
         run: sudo apt-get install libpq-dev
-              
+
+      - name: Set environment variables
+        run: |
+          echo "Setting environment variables"
+          echo "DATABASE_INT_URL='${{ env.DATABASE_INT_URL }}'" >> $GITHUB_ENV
+          echo "DATABASE_EXT_URL='${{ env.DATABASE_EXT_URL }}'" >> $GITHUB_ENV
+          echo "SECRET_KEY='${{ secrets.SECRET_KEY }}'" >> $GITHUB_ENV
+          echo "DEBUG='${{ secrets.DEBUG }}'" >> $GITHUB_ENV
+
       - name: Install dependencies and config
         run: |
           python -m pip install --upgrade pip
